added|styled search box

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Youtube</title>
         <link rel="stylesheet" href="css/style.css">
+        <script src="https://kit.fontawesome.com/c939d0e917.js"></script>
     </head>
     <body>
         <nav class="navbar">
@@ -13,6 +14,11 @@
                 <span></span>  
                 <span></span>   
                 <span></span>   
+            </div>
+            <img class="logo" src="images/YT.png" alt="logo">
+            <div class="search-box">
+                <input type="text" class="search-bar" placeholder="Search">
+                <button class="search-btn"><i class="fas fa-search"></i></button>
             </div>
         </nav>
         
