added user icons & styled section

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
                 <input type="text" class="search-bar" placeholder="Search">
                 <button class="search-btn"><i class="fas fa-search"></i></button>
             </div>
+            <div class="user-options">
+                <i class="fas fa-video"></i>
+                <i class="fas fa-th"></i>
+                <i class="fas fa-bell"></i>
+            </div>
         </nav>
         
         <script src="js/app.js"></script>
