--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
                 <i class="fas fa-th"></i>
                 <i class="fas fa-bell"></i>
             </div>
+            <div class="user-image">
+                <img src="images/sophie.jpg" alt="user image">
+            </div>
         </nav>
         
         <script src="js/app.js"></script>
