--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <title>Youtube</title>
         <link rel="stylesheet" href="css/style.css">
         <script src="https://kit.fontawesome.com/c939d0e917.js"></script>
+        
     </head>
     <body>
         <nav class="navbar">
@@ -29,6 +30,20 @@
                 <img src="images/sophie.jpg" alt="user image">
             </div>
         </nav>
+
+        <!-- sidebar -->
+        <div class="sidebar">
+            <a href="#" class="links active"><i class="fas fa-home"></i>Home</a>
+            <a href="#" class="links"><i class="fas fa-compass"></i>Explore</a>
+            <a href="#" class="links"><i class="fas fa-layer-group"></i>Subscriptions</a>
+            <hr class="seperator">
+            <a href="#" class="links"><i class="fas fa-archive"></i>Library</a>
+            <a href="#" class="links"><i class="fas fa-history"></i>History</a>
+            <a href="#" class="links"><i class="fas fa-video"></i>Your videos</a>
+            <a href="#" class="links"><i class="fas fa-clock"></i>Watch later</a>
+            <a href="#" class="links"><i class="fas fa-thumbs-up"></i>Liked videos</a>
+
+        </div>
         
         <script src="js/app.js"></script>
     </body>
