--- a/index.html
+++ b/index.html
@@ -44,6 +44,22 @@
             <a href="#" class="links"><i class="fas fa-thumbs-up"></i>Liked videos</a>
 
         </div>
+
+        <!-- filters -->
+        <div class="filters">
+            <button class="filter-options active">all</button>
+            <button class="filter-options">CSS</button>
+            <button class="filter-options">Javascript</button>
+            <button class="filter-options">Web Development</button>
+            <button class="filter-options">React</button>
+            <button class="filter-options">Music</button>
+            <button class="filter-options">APIs</button>
+            <button class="filter-options">Firebase</button>
+            <button class="filter-options">cyber security</button>
+            <button class="filter-options"> cryptocurrency  </button>
+            <button class="filter-options"> podcasts  </button>
+
+        </div>
         
         <script src="js/app.js"></script>
     </body>
