created video card

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <i class="fas fa-bell"></i>
             </div>
             <div class="user-image">
-                <img src="images/sophie.jpg" alt="user image">
+                <img src="images/IGDlogo.jpg" alt="user image">
             </div>
         </nav>
 
@@ -58,9 +58,21 @@
             <button class="filter-options">cyber security</button>
             <button class="filter-options"> cryptocurrency  </button>
             <button class="filter-options"> podcasts  </button>
-
         </div>
         
+        <!-- videos -->
+        <div class="video-container">
+            <div class="video">
+                <img  class="thumbnail" src="images/IGDlogo.jpg" alt="user image">
+                <div class="content">
+                    <img  class="channel-icon" src="images/sophie.jpg" alt="user image">
+                    <div class="info">
+                        <h4 class="title">Youtube 2021 | Create with HTML, CSS, JS </h4>
+                        <p class="channel-name">Irish Girl Developer</p>
+                    </div>
+                </div>
+            </div>
+        </div>
         <script src="js/app.js"></script>
     </body>
     </html>
