created dark mode

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
                 <input type="text" class="search-bar" placeholder="Search">
                 <button class="search-btn"><i class="fas fa-search"></i></button>
             </div>
+            <!-- <button type="button" class="dark-modeBtn">Dark Mode</button> -->
+            <input type="checkbox" id="switch"
+                class="checkbox dark-modeBtn" />
+                    <label for="switch" class="toggle"></label>    
+
             <div class="user-options">
                 <i class="fas fa-video"></i>
                 <i class="fas fa-th"></i>
